[gd_scene load_steps=52 format=3 uid="uid://cq0gonfovkxk5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_qwiok"]
[ext_resource type="Texture2D" uid="uid://clgxp3r7r60ho" path="res://assets/sprites/knight.png" id="1_xx7v0"]
[ext_resource type="Resource" uid="uid://ciugx551qfynw" path="res://resources/default_movement_data.tres" id="2_xs7pp"]
[ext_resource type="AudioStream" uid="uid://dc07caof1b7pn" path="res://assets/sounds/jump.wav" id="3_mos3j"]
[ext_resource type="Script" path="res://scripts/FSM/finite_state_machine.gd" id="5_dt2dt"]
[ext_resource type="Script" path="res://scripts/player_states/idle_state.gd" id="6_3ckn0"]
[ext_resource type="Script" path="res://scripts/player_states/run_state.gd" id="7_ael5g"]
[ext_resource type="Script" path="res://scripts/player_states/jump_state.gd" id="8_edp6a"]
[ext_resource type="Script" path="res://scripts/player_states/fall_state.gd" id="9_16r8h"]
[ext_resource type="Script" path="res://scripts/player_states/double_jump_state.gd" id="10_1w8bt"]
[ext_resource type="Script" path="res://scripts/player_states/wall_jump_state.gd" id="11_xvplm"]
[ext_resource type="Script" path="res://scripts/player_states/roll_state.gd" id="12_kh0iv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vp0d0"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hmc"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cjv4"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wiap"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4vn0"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0f8q"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fxc7"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0uw"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfvqd"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4f3h"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr8tc"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhs6x"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lbca"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fprwc"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbmv7"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r573j"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqinp"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2juv"]
atlas = ExtResource("1_xx7v0")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bwbn"]
atlas = ExtResource("1_xx7v0")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v4nu"]
atlas = ExtResource("1_xx7v0")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmfu3"]
atlas = ExtResource("1_xx7v0")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lgu3"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyvx8"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_say00"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tcnt"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhry2"]
atlas = ExtResource("1_xx7v0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rskw8"]
atlas = ExtResource("1_xx7v0")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pll4s"]
atlas = ExtResource("1_xx7v0")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6711e"]
atlas = ExtResource("1_xx7v0")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8f58"]
atlas = ExtResource("1_xx7v0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ma6d"]
atlas = ExtResource("1_xx7v0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqnlq"]
atlas = ExtResource("1_xx7v0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70e4l"]
atlas = ExtResource("1_xx7v0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_al78w"]
atlas = ExtResource("1_xx7v0")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ije5"]
atlas = ExtResource("1_xx7v0")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2v1b"]
atlas = ExtResource("1_xx7v0")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr4ph"]
atlas = ExtResource("1_xx7v0")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5v6h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp0d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cjv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wiap")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4vn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0f8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fxc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0uw")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfvqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4f3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr8tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhs6x")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lbca")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fprwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbmv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r573j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqinp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2juv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bwbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v4nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmfu3")
}],
"loop": false,
"name": &"roll",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lgu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyvx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_say00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tcnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhry2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rskw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pll4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6711e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8f58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ma6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqnlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70e4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al78w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ije5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2v1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr4ph")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f85g5"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 17
script = ExtResource("1_qwiok")
movement_data = ExtResource("2_xs7pp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_s5v6h")
animation = &"roll"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_f85g5")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mos3j")
volume_db = -17.801
bus = &"SFX"

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("5_dt2dt")
state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("6_3ckn0")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="RunState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("7_ael5g")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="JumpState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("8_edp6a")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="FallState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("9_16r8h")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="DoubleJumpState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("10_1w8bt")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="WallJumpState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("11_xvplm")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="RollState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("12_kh0iv")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="StateLabel" type="Label" parent="."]
offset_left = -22.0
offset_top = -39.0
offset_right = 18.0
offset_bottom = -16.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(0, 16)
collision_mask = 16
